# preproc

./: Makefile  README.md  setup.cfg  setup.py
config/: preproc.json
docs/: Makefile  make.bat
docs/source/: cli.rst  conf.py  index.rst
src/preproc/: __init__.py  cli.py  cliutils.py  preproc.py  preprocessing.py  version.py
src/preproc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
